--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "broswer-streams",
+  "name": "browser-streams",
   "version": "0.1.1",
   "description": "Like Nodejs streams, but in the browser",
   "main": "index.js",
